--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "fsj01",
-  "version": "0.1.0",
+  "name": "next-ecommerce",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "next": "14.2.8",
+    "firebase": "^10.14.1",
+    "fuse.js": "^7.0.0",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.26.2"
