--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^10.14.1",
+    "firebase-admin": "^12.6.0",
     "fuse.js": "^7.0.0",
     "next": "^14.2.15",
     "react": "^18",
